--- a/Jenkins_play1/Jenkins_play1/Jenkins_play1.project
+++ b/Jenkins_play1/Jenkins_play1/Jenkins_play1.project
@@ -93,6 +93,6 @@
     </Configuration>
   </Settings>
   <VirtualDirectory Name="src">
-    <File Name="main.java"/>
+    <File Name="HelloWorld.java"/>
   </VirtualDirectory>
 </CodeLite_Project>
